Fix horizontal scroll bar appearing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,6 @@ a {
 header { 
     color: white;
     background-color: black;
-    width: 100%;
     padding: 15px;
     margin: -12px;
     margin-bottom: 25px;
@@ -41,7 +40,7 @@ header {
 header h1 { 
     margin: 0px;
     padding: 0px;
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
 nav { 
@@ -49,5 +48,5 @@ nav {
     justify-content: space-between;
     align-items: center;
     gap: 50px;
-    margin-right: 25px;
+    margin-right: 20px;
 }
